--- a/bibliography.bib
+++ b/bibliography.bib
@@ -2,6 +2,15 @@
 % Encoding: UTF8
 
 
+
+@book{SzaboBabuska1991,
+ title={{Finite element analysis}},
+ author={Szab{\'o}, B. and Szab{\'o}, B.A. and Babus̆ka, I.},
+ isbn={0471502731},
+ year={1991},
+ publisher={Wiley-Interscience}
+}
+
 @article{HughesCottrellBazilevs2005,
  title={{Isogeometric analysis: CAD, finite elements, NURBS, exact geometry and mesh refinement}},
  author={Hughes, TJR and Cottrell, JA and Bazilevs, Y.},
