updates related to the kirby-1 chapter

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,6 +1,23 @@
 % This file was created with JabRef 2.6.
 % Encoding: UTF8
 
+@article {Dubiner1991,
+   AUTHOR = {Dubiner, Moshe},
+    TITLE = {Spectral methods on triangles and other domains},
+  JOURNAL = {J. Sci. Comput.},
+ FJOURNAL = {Journal of Scientific Computing},
+   VOLUME = {6},
+     YEAR = {1991},
+   NUMBER = {4},
+    PAGES = {345--390},
+     ISSN = {0885-7474},
+    CODEN = {JSCOEB},
+  MRCLASS = {76M25 (65N35 76D05)},
+ MRNUMBER = {MR1154903 (92k:76061)},
+MRREVIEWER = {Timothy Nigel Phillips},
+}
+
+
 
 
 @book{SzaboBabuska1991,
