--- a/unfinished/kirby-1/chapter.tex
+++ b/unfinished/kirby-1/chapter.tex
@@ -354,7 +354,7 @@ which we now turn.
 Orthogonal polynomials in simplicial domains are also known, although
 they lack some of the rotational symmetry of the Legendre polynomials.
 The Dubiner basis, frequently used in simplicial spectral
-elements~\citep{missing}, is known under many names in the literature.  It is
+elements~\citep{Dubiner1991}, is known under many names in the literature.  It is
 an \( L^2 \)-orthogonal basis that can be constructed by mapping particular
 tensor products of Jacobi polynomials on a square by a singular
 coordinate change to a fixed triangle.
@@ -643,7 +643,7 @@ In this case, let $\kappa = \dim P$ and $\bar{\kappa}
 \( V_2 \in \mathbb{R}^{\bar{\kappa}-\kappa,\bar{kappa}} \).  This
 scenario, though somewhat abstract, is applicable not only to BDFM,
 but also to the \nedelec~\citep{Nedelec1980}, Arnold-Winther~\citep{ArnoldWinther2002},
-Mardal-Tai-Winther~\citep{MardalTaiWinther2002}, Tai-Winther~\citep{TaiWinther2006}, and Bell~\citep{missing} element families.
+Mardal-Tai-Winther~\citep{MardalTaiWinther2002}, Tai-Winther~\citep{TaiWinther2006}, and Bell~\citep{Ciarlet} element families.
 
 Again, we summarize the discussion as a proposition.
 \begin{proposition}
@@ -731,7 +731,7 @@ is constructed so that
 D^k_{ij} \phi_j.
 \]
 How to do this depends on which bases are chosen.  For particular
-details on the Dubiner basis, see~\citep{missing}.  Then, \( \Psi^\alpha \)
+details on the Dubiner basis, see~\citep{Dubiner1991}.  Then, \( \Psi^\alpha \)
 may be computed by
 \[
 \Psi^\alpha_i = (\mathrm{D}^\alpha A)_{ij} \Phi_{j},
