--- a/bibliography.bib
+++ b/bibliography.bib
@@ -4,8 +4,7 @@
 @article {Dubiner1991,
    AUTHOR = {Dubiner, Moshe},
     TITLE = {Spectral methods on triangles and other domains},
-  JOURNAL = {J. Sci. Comput.},
- FJOURNAL = {Journal of Scientific Computing},
+ JOURNAL = {Journal of Scientific Computing},
    VOLUME = {6},
      YEAR = {1991},
    NUMBER = {4},
