hopefully final updates of kirby-1

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -87,7 +87,7 @@ MRREVIEWER = {Timothy Nigel Phillips},
 
 @article{KeeganRidzalBochev2008,
  title={Sparse-grid integration in finite element spaces},
- author={KEEGAN, M. and RIDZAL, D. and BOCHEV, P.},
+ author={Keegan, M. and Ridzal, D. and Bochev, P.},
  journal={CSRI Summer Proceedings},
  pages={32},
  year={2008},
