--- a/unfinished/kirby-1/chapter.tex
+++ b/unfinished/kirby-1/chapter.tex
@@ -39,7 +39,7 @@ finite element spaces with special basis functions to capture singular
 behavior -- our approach can provide the regular basis but not the
 ``extra'' functions.  Finally, handling the constraints imposed in
 $hp$ methods is possible, but unwieldy, with our methodology, but
-tetrahedral $hp$ bases are available~\cite{AinsworthCoyle2003}.  We
+tetrahedral $hp$ bases are available~\citep{AinsworthCoyle2003}.  We
 return to some of these issues later.
 
 \section{Background}
@@ -106,7 +106,7 @@ algebra to construct the appropriate basis for an abstract
 finite element in terms of polynomials that are easy to implement and
 well-behaved in floating point arithmetic.  We focus on
 constructing nodal bases for a single, fixed reference element.  As we
-will see in the Chapters~\ref{chap:alnes-3,chap:logg-1}, form compilers such as
+will see in the Chapters~\ref{chap:alnes-3} and ~\ref{chap:logg-1}, form compilers such as
 \texttt{ffc} and \texttt{sfc} will work
 in terms of this single reference element.
 
@@ -432,7 +432,7 @@ These polynomials, though less common in the finite element community,
 are well-known in graphics and splines.  They have 
 rotational symmetry and are nonnegative and so give positive
 mass matrices, though they are not hierarchical.
-Recently, Kirby~\cite{Kirby2009,Kirby2010} has analyzed finite element operators based on Bernstein
+Recently, \citet{Kirby2009,Kirby2010} has analyzed finite element operators based on Bernstein
 polynomials.  In these papers, particular properties of the Bernstein
 polynomials are exploited to develop algorithms for matrix-free
 application of finite element operators with complexity comparable to
@@ -561,56 +561,52 @@ We remark that this element may also be defined in terms of point evaluations of
 \subsection{Bases for other polynomial spaces}
 The basis presented above are suitable for constructing many finite
 elements, but as we have just seen, they do not work in all cases.
-The Raviart-Thomas function space,
+The Raviart-Thomas function space in 2D is spanned by
 \[
 \left( \P^2_n \right)^2 \oplus
-\left( \begin{array}{c} x \\ y \end{array} \right) \H^2_n,
+\left(\begin{array}{c} x \\y \end{array} \right) \, \H^2_n, 
 \]
-requires a basis for vectors of polynomials to be supplemented with
-an extra \( \dim \H^2_n = \dim \P^2_n - \dim \P^2_{n-1} = n \) functions.  In fact,
-any \( n \) polynomials in \( \P^2_n \backslash \P^2_{n-1} \) will
-work, not just homogeneous polynomials, although the sum above will no
-longer be direct.  See~\cite{Kirby2004} for more details.
-
-While the Raviart-Thomas element requires supplementing a standard
-basis with extra functions, the Brezzi-Douglas-Fortin-Marini triangle
-uses the function space
-\[
+Hence, this element requires a basis for vectors of polynomials  $\P^2_n$  enriched with 
+$ \left(\begin{array}{c} x \\y \end{array} \right)  \, \H^2_n$.
+On the other hand,  the Brezzi-Douglas-Fortin-Marini on triangle is defined as  
+\begin{equation}
 \left\{
-u \in (\P^2_n (K) )^2 : u \cdot n \in \P^1_{n-1}(\gamma), \gamma \in
-\mathcal{E}(K)
+u \in (\P^2_n (T) )^2 : u \cdot n \in \P^1_{n-1}(\gamma), \gamma \in \mathcal{E}(T)
 \right\}.
-\]
-Obtaining a basis for this space
-is somewhat more subtle.  FIAT and SyFi have developed different
-but mathematically equivalent solutions.  Both rely on recognizing that the
-required function space sits inside \( \left( \P^2_n \right)^2 \) and can
-be characterized by certain functionals that vanish on this larger
-space.
+\end{equation}
+Hence, this element requires that some functions are removed from   
+$\P^2_n (T)$. The removal is expressed by the constraint  $u \cdot n \in \P^1_{n-1}(\gamma)$.
 
-Three such functionals describe the basis for the BDFM triangle.
-If \( \mu^\gamma_n \)
-is the Legendre polynomial of order \( n \) on an edge \( \gamma \),
-then the functional
+Obtaining a basis for this space is somewhat more subtle.  
+FIAT and SyFi have developed different
+but mathematically equivalent solutions.  
+In SyFi, since it uses a symbolic representation, the polynomial may be easily expressed 
+in the power basis and the coefficients corresponding to second order polynomials 
+normal to the edges are set to zero. In a similar fashion, FIAT utilizes the orthogonality of the Legendre polynomials  
+ to express the constraints the edges. That is, on the edges $E_i$ the functionals (or constraints)    
 \[
-\ell_\gamma( u ) = \int_{\gamma} (u \cdot n) \mu_n^\gamma
+\ell^C_i( u ) = \int_{E_i} (u \cdot n) \mu_n^i = 0,  
 \]
-acting on \( \left( \P^2_n \right)^2 \)
-must vanish on the BDFM space, for the \( n^\mathrm{th} \) degree
-Legendre polynomial is orthogonal to all polynomials of lower degree.
-Let $\kappa = \dim P^2_n$
+where $\mu_n^i$ is second order Legendre polynomials on the edge $E_i$.  
 
-Now, we define the matrix
+
+In general, assume that we have $m$ constraints and $n-m$ degrees of freedom.
+Let 
+\begin{eqnarray}
+V^1_{ij} &=& \ell_i( \phi_j ), \quad  1\le i \le n-m, \  1\le j \le n,  \\
+V^2_{ij} &=& \ell^C_i( \phi_j ), \quad  n-m  < i \le n, \  1\le j \le n, 
+\end{eqnarray}
+Then,
 \begin{equation}
 V = \left( \begin{array}{c} V^1 \\ V^2 \end{array} \right).
 \end{equation}
-Here, \( V^1 \in \mathbb{R}^{2 \kappa - 3, 2\kappa} \) and
-\( V^2 \in \mathbb{R}^{3, 2 \kappa} \) are defined
+Here, \( V^1 \in \mathbb{R}^{n-m, n} \) and
+\( V^2 \in \mathbb{R}^{m, n} \) are defined
 by
-\[V^1_{ij} = L_i( \phi_j ),
+\[V^1_{ij} = \ell_i( \phi_j ),
 \]
 \[
-V^2_{ij} = \ell_i( \phi_j ),
+V^2_{ij} = \ell^C_i( \phi_j ),
 \]
 where \( \{ \phi_j \}_{j=1}^{2 \kappa} \) is a basis for \( (\P^2_n)^2
 \).
@@ -619,48 +615,21 @@ Consider now the matrix
 equation
 \begin{equation}
 \label{eq:extendedvdmsystem}
-V A^t = I_{2 \dim \P_n , 2 \dim \P_n -3},
+V A^t = I^{n,n-m},
 \end{equation}
-where \( I_{m,n} \) denotes the \( m \times n \) identity matrix with
-\( I_{i,j} = \delta_{i,j} \).  As before, the columns of \( A \) still
+where \( I^{n,n-m} \) denotes the \( n \times n-m \) identity matrix.  
+As before, the columns of \( A \) still
 contain the expansion coefficients of the nodal basis functions
 \( \psi_i \) in terms of \( \{ \phi_j \} \).
 Moreover, \( V_2 A = 0 \), which imples that the nodal basis functions
-are in fact in the BDFM space.
+fulfill the constraint. 
 
-More generally, we can think of our finite element space \( P \) being
-embedded in some larger space \( \bar{P} \) for which there is
-a readily usable basis.  
-If we may characterize \( P \) by
-\[
-P = \cap_{i=1}^{\dim{\bar{P}}-\dim P} \ell_i,
-\]
-where \( \ell_i : \bar{P} \rightarrow \mathbb{R} \) are linear
-functionals, then we may apply this technique.  
-In this case, let $\kappa = \dim P$ and $\bar{\kappa}
-= \dim{\bar{P}}$.  Now,
-\( V_1 \in \mathbb{R}^{\kappa,\bar{kappa}} \) and
-\( V_2 \in \mathbb{R}^{\bar{\kappa}-\kappa,\bar{kappa}} \).  This
-scenario, though somewhat abstract, is applicable not only to BDFM,
-but also to the \nedelec~\citep{Nedelec1980}, Arnold-Winther~\citep{ArnoldWinther2002},
-Mardal-Tai-Winther~\citep{MardalTaiWinther2002}, Tai-Winther~\citep{TaiWinther2006}, and Bell~\citep{Ciarlet} element families.
+Other examples than the Brezzi-Douglas-Fortin-Marini element 
+that are defined in terms of constrained polynomials are 
+\nedelec~\citep{Nedelec1980}, Arnold-Winther~\citep{ArnoldWinther2002},
+Mardal-Tai-Winther~\citep{MardalTaiWinther2002}, 
+Tai-Winther~\citep{TaiWinther2006}, and Bell~\citep{Ciarlet2002} element families.
 
-Again, we summarize the discussion as a proposition.
-\begin{proposition}
-Let \( (K,P,N) \) be a finite element with \( P \subset \bar{P} \).
-Let \( \{ \phi_i \}_{i=1}^{\bar{\kappa}} \) be a basis for \( \bar{P}
-\).  Suppose that there exist functionals 
-\( \{ \ell_i \}_{i=1}^{\bar{\kappa} - \kappa} \) on \( \bar{P} \) such that
-\[
-P = \cap_{i=1}^{\bar{\kappa} - \kappa} \mathrm{null}(\ell_i).
-\]
-Define the matrix \( A \) as in~(\ref{eq:extendedvdmsystem}).
-Then, the nodal basis for \( P \) may be expressed as
-\[
-\psi_i = A_{ij} \phi_j,
-\]
-where \( 1 \leq i \leq \kappa \) and \( 1 \leq j \leq \bar{\kappa} \).
-\end{proposition}
 
 \section{Operations on the Polynomial spaces}
 Here, we show how various important operations may be cast
@@ -738,29 +707,30 @@ may be computed by
 \]
 
 \subsection{Integration}
-Integration of basis functions over \( K \), including products of
+Integration of basis functions over the reference domain, including products of
 basis functions and/or their derivatives, may be performed numerically,
-symbolically, or exactly with some known formula.  An important aspect
-of automation is that it allows general orders of approximation.
-While this is not difficult in symbolic calculations, a numerical
-implementation like FIAT must work harder.  If Bernstein polynomials
-are used, we may use the formula
-\[
-\int_K b_1^i b_2^j b_3^k \, dx = \frac{i!j!k!}{(i+j+k+2)!}\frac{|K|}{2}
-\]
-on triangles and a similar formula for lines and tetrahedra
-to calculate integrals of expressions containing these terms exactly.  Alternately, if the Dubiner basis is used,
-orthogonality may be used.  In either case, when derivatives occur, it
-may be as efficient to use numerical quadrature.  On rectangular
-domains, tensor products of Gauss or Gauss-Lobatto quadrature can be
-used to give quadrature families to any order accuracy, although
-in some cases so-called sparse rules may win~\cite{KeeganRidzalBochev2008}
-On the simplex, efficient quadrature is more difficult to find.
-Rules based on barycentric symmetry~\citep{Dunavant1985} may be used up to a
-certain degree (which is frequently high enough in practice).  If one
-needs to go beyond these rules, it is possible to use the
-mapping~(\ref{eq:dubcoord}) to map tensor products of Gauss-Jacobi
-quadrature rules from the square to the triangle.
+symbolically, or exactly with some known formula. 
+In general, quadrature is easily performed. 
+Quadrature rules for a varity of reference elements may 
+be obtained from for example \citep{Dunavant1985,KeeganRidzalBochev2008,SolinSegethDolevzel2004}.
+
+%If Bernstein polynomials are used, we may use the formula
+%\[
+%\int_K b_1^i b_2^j b_3^k \, dx = \frac{i!j!k!}{(i+j+k+2)!}\frac{|K|}{2}
+%\]
+%on triangles and a similar formula for lines and tetrahedra
+%to calculate integrals of expressions containing these terms exactly.  Alternately, if the Dubiner basis is used,
+%orthogonality may be used.  In either case, when derivatives occur, it
+%may be as efficient to use numerical quadrature.  On rectangular
+%domains, tensor products of Gauss or Gauss-Lobatto quadrature can be
+%used to give quadrature families to any order accuracy, although
+%in some cases so-called sparse rules may win~\citep{KeeganRidzalBochev2008}
+%On the simplex, efficient quadrature is more difficult to find.
+%Rules based on barycentric symmetry~\citep{Dunavant1985} may be used up to a
+%certain degree (which is frequently high enough in practice).  If one
+%needs to go beyond these rules, it is possible to use the
+%mapping~(\ref{eq:dubcoord}) to map tensor products of Gauss-Jacobi
+%quadrature rules from the square to the triangle.
 
 \subsection{Association with facets}
 As we saw in the definition of for instance the  Brezzi-Douglas-Marini element,  
@@ -837,7 +807,7 @@ To obtain the desired patching, the elements should provide identifiers that det
 of freedom of some neighbouring elements should be shared or not.  
 One alternative is to relate each degree of freedom on the reference cell to a point in the
 reference cell. The geometry mapping then gives a global point in the mesh, by \eqref{eq:geometry}, that identifies the degree of freedom,
-that is, the  degree of freedom in different elements is shared if they correspond to the same global point in the mesh. 
+that is, the  degrees of freedom in different elements are shared if they correspond to the same global point in the mesh. 
 Alternatively, each degree of freedom may be related to a local mesh entity, like a vertex, edge or face, on the reference element. After mapping the element, the degree of freedom will then be related to the corresponding mesh entity in the global mesh. This alternative requires that the corresponding mesh entities are numbered.      
 
 
