--- a/unfinished/kirby-1/chapter.tex
+++ b/unfinished/kirby-1/chapter.tex
@@ -76,7 +76,7 @@ mysterious to the end user of a
 finite element system, as
 interactions with finite element bases are typically mediated through
 tools that construct the global finite element operators.
-The end user will typically be satisfied if two conditiones are met.
+The end user will typically be satisfied if two conditions are met.
 First, a finite element system
 should support the common elements used in the application
 area of interest.  Second, it should provide flexibility with respect
@@ -94,7 +94,7 @@ brought a new wave of elements with improved properties.  A
 generative system for finite element bases can far more
 readily assimilate these and future developments.
 Automation also provides generality with respect to the order of approximation that standard libraries
-might not otherwise provide. Finally, the end-user might even easilly define his own new element
+might not otherwise provide. Finally, the end-user might even easily define his own new element
 and test its numerical properties before analyzing it mathematically.
 
 
@@ -141,7 +141,7 @@ consists of polynomials.
 
 Given a finite element, a concrete
 basis, often called the nodal basis,
-for this element can be computed by using the following defintion.
+for this element can be computed by using the following definition.
 
 %The function space \( P \)
 %typically consists of polynomials.  Also, this definition is
@@ -165,7 +165,7 @@ The main issue at hand in this chapter is the \emph{construction} of
 this nodal basis.  For
 any given finite element, one may construct the nodal basis
 explicitly with elementary algebra.  However, this becomes tedious as
-we consider many different familes of elements and want arbitrary
+we consider many different families of elements and want arbitrary
 order instances of each family.  Hence, we present a new 
 paradigm here that undergirds computer programs for automating the
 construction of nodal bases.
@@ -174,17 +174,17 @@ In addition to the construction of the nodal base we need to keep in mind that
 finite elements are patched together to form a piecewise
 polynomial field over a mesh. The fitness (or stability) of a particular finite element method for a particular problem relies on the continuity
 requirements of the problem. The degrees of freedom of a particular element
-are often choosen such that these continuity requirements are fulfilled.
+are often chosen such that these continuity requirements are fulfilled.
 
 Hence, in addition to computing the nodal basis, the framework developed here
 simplifies software for the following tasks:
 
 \begin{enumerate}
 \item Evaluate the basis functions and their derivatives at points.
-\item Associtate the basis functions (or degree of freedom) with
+\item Associate the basis functions (or degree of freedom) with
       topological facets of \( K \) such as its vertices, edges and its
       placement on the edges.
-\item Associtate each basis function with additional metadata that describes  
+\item Associate each basis function with additional meta-data that describes  
       the mapping that should be used for the evaluation of the basis functions and their derivatives.
 \item Provide rules for evaluating the degrees of freedom applied to arbitrary functions 
       (needed for Dirichlet boundary conditions).
@@ -252,20 +252,20 @@ The degrees of freedom typically involves point evaluation, differentiation, int
 \subsection{Polynomial spaces}
 In Definition \ref{chap:kirby-1:fedef} we defined the finite element in terms
 of a finite dimensional function space $\mathcal{V}$. Although it is not strictly
-neccessary,
+necessary,
 the functions used in finite elements are typically polynomials.
-While our general strategy will in principle accomodate non-polynomial bases, we
+While our general strategy will in principle accommodate non-polynomial bases, we
 only deal with polynomials in this chapter.
 The most common space is
 $\P_q^d$, the space of polynomials of degree $q$ in $\R^d$. There
 are many different ways to represent $\P^d_q$. We will discuss the power
 and Bernstein bases, and orthogonal bases such as Dubiner, Jacobi, and Legendre.  Each of these bases
-has explicit representations or reccurence relations making them easy to 
+has explicit representations or recurrence relations making them easy to 
 evaluate and differentiate. In contrast,  
 most finite element bases are determined by solving 
 the linear system in Definition \ref{chap:kirby-1:nodaldef}.
 In addition to $\P^d_q$ we will also for some
-elements need $\H^d_q$, the space of homogenous polynomials of degree
+elements need $\H^d_q$, the space of homogeneous polynomials of degree
 \( q \) in \( d \) variables.
 
 Typically, the techniques developed  here
@@ -274,7 +274,7 @@ tensor-product structure.
 %Some rectangular elements like the
 %Brezzi-Douglas-Marini family~\citep{BrezziDouglasMarini1985a}, however, are not based on
 %tensor-product polynomial spaces, and the techniques described
-%in this chapther apply in that
+%in this chapter apply in that
 %case as well.  
 SyFi does, however, have support for rectangular domains, while  FIAT does not.
 
@@ -411,7 +411,7 @@ In 1D, the  basis functions in $\P_q$ take the form,
 \end{equation}
 and then \( \P_q \) is spanned by \( \{ \psi_i^q \}_{i=0}^q \).
 
-Notice that the berstein basis consists of powers of \( x \) and \( 1-x \),  which are the
+Notice that the Bernstein basis consists of powers of \( x \) and \( 1-x \),  which are the
 barycentric coordinates for \( [0,1] \), an observation that makes it
 easy to extend the basis to simplices in higher dimensions.
 Let $b_1$, $b_2$, and $b_3$ be the barycentric coordinates for
@@ -489,7 +489,7 @@ That is, the degrees of freedom $\ell_i : \mathcal{V} \rightarrow \mathbb{R}$ ar
 \ell_i ( v) = \int_{T} v \, \delta_{x_i} \, dx = v(x_i),   
 \end{equation}
 where $x_i$ are the vertices (0,0), (1,0), (0,1).
-The cooresponding basis functions
+The corresponding basis functions
 are $1-x-y$, $x$, and $y$.  The second order element is shown in right 
 triangle. It has six degrees of freedom, three at the vertices and three
 at the edges, all are point evaluations.  
@@ -520,7 +520,7 @@ associated with the vertex $x_i$ are,
 In addition, there is one internal point evaluation, which in total gives ten degrees of freedom, which is the same number
 of degrees of freedom as in $\P^2_3$.  One feature of the Hermite element
 is that it has continuous derivatives at the vertices (it will however
-not neccessarily result in a $H^2$ conforming approximation).
+not necessarily result in a $H^2$ conforming approximation).
 \end{example}
 
 \begin{figure}
@@ -621,7 +621,7 @@ where \( I^{n,n-m} \) denotes the \( n \times n-m \) identity matrix.
 As before, the columns of \( A \) still
 contain the expansion coefficients of the nodal basis functions
 \( \psi_i \) in terms of \( \{ \phi_j \} \).
-Moreover, \( V_2 A = 0 \), which imples that the nodal basis functions
+Moreover, \( V_2 A = 0 \), which implies that the nodal basis functions
 fulfill the constraint. 
 
 Other examples than the Brezzi-Douglas-Fortin-Marini element 
@@ -658,7 +658,7 @@ product
 \subsection{Differentiation}
 Differentiation is more complicated and presents more options.
 Let \( \alpha = ( \alpha_1 , \alpha_2 , \dots \alpha_d ) \) be a
-multiindex so that
+multi-index so that
 \[
 D^\alpha \equiv \frac{\partial^{|\alpha|}}{\partial
   x_1^{\alpha_1} \partial x_2^{\alpha_2} \dots \partial x_d^{\alpha_d}},
@@ -683,7 +683,7 @@ This presupposes that one may conveniently compute all derivatives of
 the \( \{ \psi_i \} \).  This is typically true in symbolic
 computation or when using the the power basis.  
 For the Bernstein, Jacobi, and Legendre
- polynomials reccurence relations are
+ polynomials recurrence relations are
 available, see \citep{KarniadakisSherwin2005,Kirby2010}.  
 The Dubiner basis, as typically formulated, contains a coordinate
 singularity that prevents automatic differentiation from working at
@@ -711,7 +711,7 @@ Integration of basis functions over the reference domain, including products of
 basis functions and/or their derivatives, may be performed numerically,
 symbolically, or exactly with some known formula. 
 In general, quadrature is easily performed. 
-Quadrature rules for a varity of reference elements may 
+Quadrature rules for a variety of reference elements may 
 be obtained from for example \citep{Dunavant1985,KeeganRidzalBochev2008,SolinSegethDolevzel2004}.
 
 %If Bernstein polynomials are used, we may use the formula
@@ -745,7 +745,7 @@ Linear functionals are usually cast in terms of linear combinations of integrati
 
 \subsection{The mapping of the reference element}
 
-A common practice, employed throuought the FEniCS
+A common practice, employed throughout the FEniCS
 software and in many other finite element codes, is to map the nodal
 basis functions from the reference cell to each cell in a mesh.
 Sometimes, this is as simple as an affine change of coordinates; in
@@ -785,8 +785,8 @@ chain rule,
 \sum_j \frac{\partial \hat \phi}{\partial \hat x_j} \frac{\partial \hat x_j }{\partial x_i }  .
 \end{equation}
 
-The above mapping of basisfunctions is common for approximations in $H^1$. For approximations in $\Hdiv$ or
-$\Hcurl$ it is neccessary to use the Piola mapping, where the mapping for the basis functions
+The above mapping of basis functions is common for approximations in $H^1$. For approximations in $\Hdiv$ or
+$\Hcurl$ it is necessary to use the Piola mapping, where the mapping for the basis functions
 differs from the geometry mapping. That is, for $\Hdiv$ elements, the Piola mapping reads  
 \begin{equation}
 \label{eq:subs}
@@ -804,7 +804,7 @@ of a reference element.
 As shown in Figure~\ref{fig:kirby-1:patch}, finite elements 
 are patched together with a continuity depending on the degrees of freedom.  
 To obtain the desired patching, the elements should provide identifiers that determining whether the degrees
-of freedom of some neighbouring elements should be shared or not.  
+of freedom of some neighboring elements should be shared or not.  
 One alternative is to relate each degree of freedom on the reference cell to a point in the
 reference cell. The geometry mapping then gives a global point in the mesh, by \eqref{eq:geometry}, that identifies the degree of freedom,
 that is, the  degrees of freedom in different elements are shared if they correspond to the same global point in the mesh. 
